# CheckPatchPanelsAndPorts

./: .gitignore  CMakeLists.txt  CheckPatchPanelAndPorts.desktop  README.md  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  patchpanels.cpp  patchpanels.hpp
src/: about.cpp  about.hpp  mainwindow.cpp  mainwindow.ui  patchpanels.cpp  patchpanels.hpp  patchpanels.ui
